Update to use v0.2.2.

--- a/messages_pipeline/Pipfile
+++ b/messages_pipeline/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-CoreDataModules = {git = "ssh://git@github.com/AfricasVoices/CoreDataModules.git", editable = true, ref = "6f0181b77a9474b7fd0a5970096f716e3c295a1e"}
+CoreDataModules = {git = "ssh://git@github.com/AfricasVoices/CoreDataModules.git", editable = true, ref = "v0.2.2"}
 jsonpickle = "*"
 python-dateutil = "*"
 
