--- a/survey_pipeline/Pipfile
+++ b/survey_pipeline/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-CoreDataModules = {git = "ssh://git@github.com/AfricasVoices/CoreDataModules.git", editable = true, ref = "75d6e0770825001c895a35fc5723e3813012fc81"}
+CoreDataModules = {git = "ssh://git@github.com/AfricasVoices/CoreDataModules.git", editable = true, ref = "v0.2.2"}
 jsonpickle = "*"
 python-dateutil = "*"
 
