Add an output mode switch to survey_auto_code.py
Switch is either "coda" or "coding-csv".

--- a/survey_auto_code/Dockerfile
+++ b/survey_auto_code/Dockerfile
@@ -30,6 +30,6 @@ ADD . /app
 # Make a directory for intermediate data
 RUN mkdir /app/data
 
-# USER is an environment variable which needs to be set when constructing this container e.g. via
+# USER and CODING_MODE are environment variables which need to be set when constructing this container e.g. via
 # docker run or docker container create. Use docker-run.sh to set these automatically.
-CMD pipenv run python survey_auto_code.py "$USER" data/input.json data/output.json data/coding
+CMD pipenv run python survey_auto_code.py "$USER" data/input.json data/output.json "$CODING_MODE" data/coding
