--- a/survey_merge_coded/Dockerfile
+++ b/survey_merge_coded/Dockerfile
@@ -30,7 +30,7 @@ ADD . /app
 # Make a directory for intermediate data
 RUN mkdir /app/data
 
-# USER and CODING_MODE are environment variables which needs to be set when constructing this container e.g. via
+# USER and CODING_MODE are environment variables which need to be set when constructing this container e.g. via
 # docker run or docker container create. Use docker-run.sh to set these automatically.
 CMD pipenv run python survey_merge_coded.py "$USER" data/input.json "$CODING_MODE" data/coding data/output.json
 #CMD ls -R data
