Update survey_auto_code to no longer clone Core Data with SSH

--- a/survey_auto_code/Pipfile
+++ b/survey_auto_code/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-CoreDataModules = {git = "ssh://git@github.com/AfricasVoices/CoreDataModules.git", editable = true, ref = "v0.2.3"}
+CoreDataModules = {git = "https://www.github.com/AfricasVoices/CoreDataModules", editable = true, ref = "v0.2.3"}
 jsonpickle = "*"
 python-dateutil = "*"
 
