--- a/messages_pipeline/Dockerfile
+++ b/messages_pipeline/Dockerfile
@@ -20,4 +20,4 @@ RUN mkdir /app/data
 
 # USER is an environment variable which needs to be set when constructing this container e.g. via
 # docker run or docker container create. Use docker-run.sh to set these automatically.
-CMD pipenv run python messages_pipeline.py "$USER" data/input.json data/output.json data/interface_export
+CMD pipenv run python messages_pipeline.py "$USER" data/input.json data/output.json data/output.csv
