Update survey auto code to clean only age and gender for Swahili - the other languages just have the digits cleaner applied.

--- a/survey_auto_code/Dockerfile
+++ b/survey_auto_code/Dockerfile
@@ -18,6 +18,6 @@ ADD . /app
 # Make a directory for intermediate data
 RUN mkdir /app/data
 
-# USER and CODING_MODE are environment variables which need to be set when constructing this container e.g. via
+# USER, LANGUAGE and CODING_MODE are environment variables which need to be set when constructing this container e.g. via
 # docker run or docker container create. Use docker-run.sh to set these automatically.
-CMD pipenv run python survey_auto_code.py "$USER" data/input.json data/output.json "$CODING_MODE" data/coding
+CMD pipenv run python survey_auto_code.py "$USER" data/input.json "$LANGUAGE" data/output.json "$CODING_MODE" data/coding
